dist/src/main/kubernetes/manifests/print/metasfresh-print-deploy_demouser_demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "metasfresh-print-demouser-demo"
  labels:
    de.metas.deployment.type: metasfresh-print
    de.metas.deployment.stage: "demo"
    de.metas.deployment.user: "demouser"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        de.metas.deployment.type: metasfresh-print
        de.metas.deployment.user: "demouser"
        de.metas.deployment.stage: "demo"
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: "metasfresh-postgresql-demouser-demo"
        - name: DB_PORT
          value: '5432'
        - name: DEBUG_PRINT_BASH_CMDS
          value: 'y'
        - name: DB_WAIT_FOR_DBMS
          value: 'y'
        - name: JAVA_MAX_HEAP
          value: '100M'
        - name: METASFRESH_ADMIN_URL
          value: 'http://metasfresh-admin:9090'
        - name: SERVER_PORT
          value: '8183'
        - name: DEBUG_PORT
          value: '8791'
        name: print
        image: docker.metasfresh.com/metasfresh/metasfresh-print:master_LATEST
        imagePullPolicy: Always
        ports:
          - containerPort: 8183
          - containerPort: 8791
        resources: 
          requests:
            memory: 128M
#            cpu: 500m
        volumeMounts:
        - mountPath: /etc/localtime
          name: host-localtime
          readOnly: true
        - mountPath: /etc/timezone
          name: host-timezone
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: host-localtime
        hostPath:
          path: /etc/localtime
      - name: host-timezone
        hostPath:
          path: /etc/timezone
