dist/src/main/kubernetes/manifests/print/metasfresh-print-svc_demouser_demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: "metasfresh-print-demouser-demo"
  labels:
    de.metas.deployment.type: metasfresh-print
    de.metas.deployment.stage: "demo"
    de.metas.deployment.user: "demouser"
spec:
  ports:
  - name: http
    port: 8183
    protocol: TCP
    targetPort: 8183
  - name: remote-debug
    port: 8791
    protocol: TCP
    targetPort: 8791
  selector:
    de.metas.deployment.stage: "demo"
    de.metas.deployment.type: metasfresh-print
    de.metas.deployment.user: "demouser"
  sessionAffinity: None
# ClusterIP is the default; we use it because we don't want to make the service available to the outside (we have the ingress for that)
# see https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types
  type: ClusterIP
